--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation project(":permission")
+    implementation 'com.llm.permission:permission:1.0.0'
+//    implementation project(":permission")
 }
